tests/NormalTests/paczka2/big_fuzzy/91617117.err
Error in line 3: A145 A319 16,5
Error in line 4: A145 S309 47,4
Error in line 9: A145 A319 116,74
Error in line 6: A145 A319 25,7
Error in line 11: mqy01tjt A540 94,9
Error in line 19: A145 A145 191,3
Error in line 13: mqy01tjt A319 82,4
Error in line 31: mqy01tjt S309 23,5
Error in line 38: mqy01tjt A319 336,6
Error in line 37: PtwlJHSAN A540 16,8
Error in line 20: oDnk3D A145 319,3
Error in line 49: ujg1zlvw A145 58,3
Error in line 59: oDnk3D S309 10,4
Error in line 76: mqy01tjt A540 70,7
Error in line 77: A145 S309 95,5
Error in line 89: ssjQH A145 59,8
Error in line 87: PtwlJHSAN A145 36,3
Error in line 99: ssjQH A319 49,4
Error in line 102: ssjQH A540 43,1
Error in line 106: PtwlJHSAN S309 22,7
Error in line 115: A145 A540 0,2
Error in line 93: oDnk3D A145 18,9
Error in line 120: ssjQH A319 92,1
Error in line 127: oDnk3D·A319·88,8
Error in line 130: I09 A540 66,5
Error in line 136: ssjQH A540 -3,6
Error in line 126: ssjQH A540 60,4
Error in line 135: PtwlJHSAN A145 82,0
Error in line 150: oDnk3D A145 94,º
Error in line 151: mqy01tjt A145 69,3
Error in line 158: oDnk3D A145 266,8
Error in line 164: mqy01tjt S309 29,6
Error in line 170: I09 A540 2,08
Error in line 165: ujg1zlvw A540 17,1
Error in line 188: ssjQH A540 9,10
Error in line 196: A145 A319 /66,0
Error in line 173: ssjQH A540 60,3
Error in line 167: I09 A540 2,2
Error in line 210: A145 A319 131,7
Error in line 202: I09 S309 279,6
Error in line 215: I09 A540 48,5
Error in line 225: mqy01tjt A319 42,0
Error in line 214: oDnk3D A319 33,7
Error in line 232: ujg1zlvw S309 40,7
Error in line 241: PtwlJHSAN A145 151,7
